src/util/io/fileformat/obj/parsing/y.output
   0  $accept : end $end

   1  end : file stmt

   2  file :
   3       | file stmt NL
   4       | file exception

   5  exception : VERTEX error NL
   6            | TEXTURE error NL
   7            | NORMAL error NL
   8            | PARAMETER error NL
   9            | POINT error NL
  10            | LINE error NL
  11            | FACE error NL
  12            | LIBRARY error NL
  13            | MATERIAL error NL
  14            | OBJECT error NL
  15            | GROUP error NL
  16            | error NL

  17  stmt :
  18       | definition
  19       | element
  20       | grouping
  21       | materials

  22  definition : vertex
  23             | texture
  24             | normal
  25             | parameter
  26             | cs

  27  element : point
  28          | line
  29          | face

  30  grouping : object
  31           | group

  32  materials : library
  33            | material

  34  vertex : VERTEX FLOAT FLOAT FLOAT
  35         | VERTEX FLOAT FLOAT FLOAT FLOAT

  36  texture : TEXTURE FLOAT
  37          | TEXTURE FLOAT FLOAT
  38          | TEXTURE FLOAT FLOAT FLOAT

  39  normal : NORMAL FLOAT FLOAT FLOAT

  40  parameter : PARAMETER FLOAT
  41            | PARAMETER FLOAT FLOAT
  42            | PARAMETER FLOAT FLOAT FLOAT

  43  point : POINT v

  44  line : LINE vchain2

  45  face : FACE vchain3
  46       | FACE vtchain3
  47       | FACE vnchain3
  48       | FACE vtnchain3

  49  cs : xcs END

  50  xcs : type
  51      | xcs degree
  52      | xcs basis
  53      | xcs step

  54  type : CSTYPE STRING
  55       | CSTYPE RAT STRING

  56  degree : DEGREE INT
  57         | DEGREE INT INT

  58  basis : BASIS U intchain
  59        | BASIS VERTEX intchain

  60  step : STEP INT
  61       | STEP INT INT

  62  curve : CURVE FLOAT FLOAT vchain2
  63        | CURVE2D pchain2

  64  surface : SURFACE FLOAT FLOAT FLOAT FLOAT

  65  object : OBJECT STRING

  66  group : GROUP STRING

  67  library : LIBRARY STRING

  68  material : MATERIAL STRING

  69  vertexChain : vchain
  70              | vtchain
  71              | vnchain
  72              | vtnchain

  73  vertexChain2 : vchain2
  74               | vtchain2
  75               | vnchain2
  76               | vtnchain2

  77  vertexChain3 : vchain3
  78               | vtchain3
  79               | vnchain3
  80               | vtnchain3

  81  v : INT

  82  vchain : v
  83         | v vchain

  84  vchain2 : v vchain

  85  vchain3 : v vchain2

  86  vt : INT SLASH INT

  87  vtchain : vt
  88          | vt vtchain

  89  vtchain2 : vt vtchain

  90  vtchain3 : vt vtchain2

  91  vn : INT SLASH SLASH INT

  92  vnchain : vn
  93          | vn vnchain

  94  vnchain2 : vn vnchain

  95  vnchain3 : vn vnchain2

  96  vtn : INT SLASH INT SLASH INT

  97  vtnchain : vtn
  98           | vtn vtnchain

  99  vtnchain2 : vtn vtnchain

 100  vtnchain3 : vtn vtnchain2

 101  p : INT

 102  pchain : p
 103         | p pchain

 104  pchain2 : p pchain

 105  intchain : INT
 106           | INT intchain

state 0
	$accept : . end $end  (0)
	file : .  (2)

	.  reduce 2

	end  goto 1
	file  goto 2


state 1
	$accept : end . $end  (0)

	$end  accept


state 2
	end : file . stmt  (1)
	file : file . stmt NL  (3)
	file : file . exception  (4)
	stmt : .  (17)

	error  shift 3
	VERTEX  shift 4
	TEXTURE  shift 5
	NORMAL  shift 6
	PARAMETER  shift 7
	GROUP  shift 8
	OBJECT  shift 9
	CSTYPE  shift 10
	POINT  shift 11
	LINE  shift 12
	FACE  shift 13
	MATERIAL  shift 14
	LIBRARY  shift 15
	$end  reduce 17
	NL  reduce 17

	stmt  goto 16
	exception  goto 17
	definition  goto 18
	element  goto 19
	grouping  goto 20
	materials  goto 21
	vertex  goto 22
	texture  goto 23
	normal  goto 24
	parameter  goto 25
	cs  goto 26
	point  goto 27
	line  goto 28
	face  goto 29
	object  goto 30
	group  goto 31
	library  goto 32
	material  goto 33
	xcs  goto 34
	type  goto 35


state 3
	exception : error . NL  (16)

	NL  shift 36
	.  error


state 4
	exception : VERTEX . error NL  (5)
	vertex : VERTEX . FLOAT FLOAT FLOAT  (34)
	vertex : VERTEX . FLOAT FLOAT FLOAT FLOAT  (35)

	error  shift 37
	FLOAT  shift 38
	.  error


state 5
	exception : TEXTURE . error NL  (6)
	texture : TEXTURE . FLOAT  (36)
	texture : TEXTURE . FLOAT FLOAT  (37)
	texture : TEXTURE . FLOAT FLOAT FLOAT  (38)

	error  shift 39
	FLOAT  shift 40
	.  error


state 6
	exception : NORMAL . error NL  (7)
	normal : NORMAL . FLOAT FLOAT FLOAT  (39)

	error  shift 41
	FLOAT  shift 42
	.  error


state 7
	exception : PARAMETER . error NL  (8)
	parameter : PARAMETER . FLOAT  (40)
	parameter : PARAMETER . FLOAT FLOAT  (41)
	parameter : PARAMETER . FLOAT FLOAT FLOAT  (42)

	error  shift 43
	FLOAT  shift 44
	.  error


state 8
	exception : GROUP . error NL  (15)
	group : GROUP . STRING  (66)

	error  shift 45
	STRING  shift 46
	.  error


state 9
	exception : OBJECT . error NL  (14)
	object : OBJECT . STRING  (65)

	error  shift 47
	STRING  shift 48
	.  error


state 10
	type : CSTYPE . STRING  (54)
	type : CSTYPE . RAT STRING  (55)

	STRING  shift 49
	RAT  shift 50
	.  error


state 11
	exception : POINT . error NL  (9)
	point : POINT . v  (43)

	error  shift 51
	INT  shift 52
	.  error

	v  goto 53


state 12
	exception : LINE . error NL  (10)
	line : LINE . vchain2  (44)

	error  shift 54
	INT  shift 52
	.  error

	v  goto 55
	vchain2  goto 56


state 13
	exception : FACE . error NL  (11)
	face : FACE . vchain3  (45)
	face : FACE . vtchain3  (46)
	face : FACE . vnchain3  (47)
	face : FACE . vtnchain3  (48)

	error  shift 57
	INT  shift 58
	.  error

	v  goto 59
	vchain3  goto 60
	vtchain3  goto 61
	vnchain3  goto 62
	vtnchain3  goto 63
	vt  goto 64
	vn  goto 65
	vtn  goto 66


state 14
	exception : MATERIAL . error NL  (13)
	material : MATERIAL . STRING  (68)

	error  shift 67
	STRING  shift 68
	.  error


state 15
	exception : LIBRARY . error NL  (12)
	library : LIBRARY . STRING  (67)

	error  shift 69
	STRING  shift 70
	.  error


state 16
	end : file stmt .  (1)
	file : file stmt . NL  (3)

	NL  shift 71
	$end  reduce 1


state 17
	file : file exception .  (4)

	.  reduce 4


state 18
	stmt : definition .  (18)

	.  reduce 18


state 19
	stmt : element .  (19)

	.  reduce 19


state 20
	stmt : grouping .  (20)

	.  reduce 20


state 21
	stmt : materials .  (21)

	.  reduce 21


state 22
	definition : vertex .  (22)

	.  reduce 22


state 23
	definition : texture .  (23)

	.  reduce 23


state 24
	definition : normal .  (24)

	.  reduce 24


state 25
	definition : parameter .  (25)

	.  reduce 25


state 26
	definition : cs .  (26)

	.  reduce 26


state 27
	element : point .  (27)

	.  reduce 27


state 28
	element : line .  (28)

	.  reduce 28


state 29
	element : face .  (29)

	.  reduce 29


state 30
	grouping : object .  (30)

	.  reduce 30


state 31
	grouping : group .  (31)

	.  reduce 31


state 32
	materials : library .  (32)

	.  reduce 32


state 33
	materials : material .  (33)

	.  reduce 33


state 34
	cs : xcs . END  (49)
	xcs : xcs . degree  (51)
	xcs : xcs . basis  (52)
	xcs : xcs . step  (53)

	DEGREE  shift 72
	BASIS  shift 73
	STEP  shift 74
	END  shift 75
	.  error

	degree  goto 76
	basis  goto 77
	step  goto 78


state 35
	xcs : type .  (50)

	.  reduce 50


state 36
	exception : error NL .  (16)

	.  reduce 16


state 37
	exception : VERTEX error . NL  (5)

	NL  shift 79
	.  error


state 38
	vertex : VERTEX FLOAT . FLOAT FLOAT  (34)
	vertex : VERTEX FLOAT . FLOAT FLOAT FLOAT  (35)

	FLOAT  shift 80
	.  error


state 39
	exception : TEXTURE error . NL  (6)

	NL  shift 81
	.  error


state 40
	texture : TEXTURE FLOAT .  (36)
	texture : TEXTURE FLOAT . FLOAT  (37)
	texture : TEXTURE FLOAT . FLOAT FLOAT  (38)

	FLOAT  shift 82
	$end  reduce 36
	NL  reduce 36


state 41
	exception : NORMAL error . NL  (7)

	NL  shift 83
	.  error


state 42
	normal : NORMAL FLOAT . FLOAT FLOAT  (39)

	FLOAT  shift 84
	.  error


state 43
	exception : PARAMETER error . NL  (8)

	NL  shift 85
	.  error


state 44
	parameter : PARAMETER FLOAT .  (40)
	parameter : PARAMETER FLOAT . FLOAT  (41)
	parameter : PARAMETER FLOAT . FLOAT FLOAT  (42)

	FLOAT  shift 86
	$end  reduce 40
	NL  reduce 40


state 45
	exception : GROUP error . NL  (15)

	NL  shift 87
	.  error


state 46
	group : GROUP STRING .  (66)

	.  reduce 66


state 47
	exception : OBJECT error . NL  (14)

	NL  shift 88
	.  error


state 48
	object : OBJECT STRING .  (65)

	.  reduce 65


state 49
	type : CSTYPE STRING .  (54)

	.  reduce 54


state 50
	type : CSTYPE RAT . STRING  (55)

	STRING  shift 89
	.  error


state 51
	exception : POINT error . NL  (9)

	NL  shift 90
	.  error


state 52
	v : INT .  (81)

	.  reduce 81


state 53
	point : POINT v .  (43)

	.  reduce 43


state 54
	exception : LINE error . NL  (10)

	NL  shift 91
	.  error


state 55
	vchain2 : v . vchain  (84)

	INT  shift 52
	.  error

	v  goto 92
	vchain  goto 93


state 56
	line : LINE vchain2 .  (44)

	.  reduce 44


state 57
	exception : FACE error . NL  (11)

	NL  shift 94
	.  error


state 58
	v : INT .  (81)
	vt : INT . SLASH INT  (86)
	vn : INT . SLASH SLASH INT  (91)
	vtn : INT . SLASH INT SLASH INT  (96)

	SLASH  shift 95
	INT  reduce 81


state 59
	vchain3 : v . vchain2  (85)

	INT  shift 52
	.  error

	v  goto 55
	vchain2  goto 96


state 60
	face : FACE vchain3 .  (45)

	.  reduce 45


state 61
	face : FACE vtchain3 .  (46)

	.  reduce 46


state 62
	face : FACE vnchain3 .  (47)

	.  reduce 47


state 63
	face : FACE vtnchain3 .  (48)

	.  reduce 48


state 64
	vtchain3 : vt . vtchain2  (90)

	INT  shift 97
	.  error

	vtchain2  goto 98
	vt  goto 99


state 65
	vnchain3 : vn . vnchain2  (95)

	INT  shift 100
	.  error

	vnchain2  goto 101
	vn  goto 102


state 66
	vtnchain3 : vtn . vtnchain2  (100)

	INT  shift 103
	.  error

	vtnchain2  goto 104
	vtn  goto 105


state 67
	exception : MATERIAL error . NL  (13)

	NL  shift 106
	.  error


state 68
	material : MATERIAL STRING .  (68)

	.  reduce 68


state 69
	exception : LIBRARY error . NL  (12)

	NL  shift 107
	.  error


state 70
	library : LIBRARY STRING .  (67)

	.  reduce 67


state 71
	file : file stmt NL .  (3)

	.  reduce 3


state 72
	degree : DEGREE . INT  (56)
	degree : DEGREE . INT INT  (57)

	INT  shift 108
	.  error


state 73
	basis : BASIS . U intchain  (58)
	basis : BASIS . VERTEX intchain  (59)

	U  shift 109
	VERTEX  shift 110
	.  error


state 74
	step : STEP . INT  (60)
	step : STEP . INT INT  (61)

	INT  shift 111
	.  error


state 75
	cs : xcs END .  (49)

	.  reduce 49


state 76
	xcs : xcs degree .  (51)

	.  reduce 51


state 77
	xcs : xcs basis .  (52)

	.  reduce 52


state 78
	xcs : xcs step .  (53)

	.  reduce 53


state 79
	exception : VERTEX error NL .  (5)

	.  reduce 5


state 80
	vertex : VERTEX FLOAT FLOAT . FLOAT  (34)
	vertex : VERTEX FLOAT FLOAT . FLOAT FLOAT  (35)

	FLOAT  shift 112
	.  error


state 81
	exception : TEXTURE error NL .  (6)

	.  reduce 6


state 82
	texture : TEXTURE FLOAT FLOAT .  (37)
	texture : TEXTURE FLOAT FLOAT . FLOAT  (38)

	FLOAT  shift 113
	$end  reduce 37
	NL  reduce 37


state 83
	exception : NORMAL error NL .  (7)

	.  reduce 7


state 84
	normal : NORMAL FLOAT FLOAT . FLOAT  (39)

	FLOAT  shift 114
	.  error


state 85
	exception : PARAMETER error NL .  (8)

	.  reduce 8


state 86
	parameter : PARAMETER FLOAT FLOAT .  (41)
	parameter : PARAMETER FLOAT FLOAT . FLOAT  (42)

	FLOAT  shift 115
	$end  reduce 41
	NL  reduce 41


state 87
	exception : GROUP error NL .  (15)

	.  reduce 15


state 88
	exception : OBJECT error NL .  (14)

	.  reduce 14


state 89
	type : CSTYPE RAT STRING .  (55)

	.  reduce 55


state 90
	exception : POINT error NL .  (9)

	.  reduce 9


state 91
	exception : LINE error NL .  (10)

	.  reduce 10


state 92
	vchain : v .  (82)
	vchain : v . vchain  (83)

	INT  shift 52
	$end  reduce 82
	NL  reduce 82

	v  goto 92
	vchain  goto 116


state 93
	vchain2 : v vchain .  (84)

	.  reduce 84


state 94
	exception : FACE error NL .  (11)

	.  reduce 11


state 95
	vt : INT SLASH . INT  (86)
	vn : INT SLASH . SLASH INT  (91)
	vtn : INT SLASH . INT SLASH INT  (96)

	SLASH  shift 117
	INT  shift 118
	.  error


state 96
	vchain3 : v vchain2 .  (85)

	.  reduce 85


state 97
	vt : INT . SLASH INT  (86)

	SLASH  shift 119
	.  error


state 98
	vtchain3 : vt vtchain2 .  (90)

	.  reduce 90


state 99
	vtchain2 : vt . vtchain  (89)

	INT  shift 97
	.  error

	vtchain  goto 120
	vt  goto 121


state 100
	vn : INT . SLASH SLASH INT  (91)

	SLASH  shift 122
	.  error


state 101
	vnchain3 : vn vnchain2 .  (95)

	.  reduce 95


state 102
	vnchain2 : vn . vnchain  (94)

	INT  shift 100
	.  error

	vnchain  goto 123
	vn  goto 124


state 103
	vtn : INT . SLASH INT SLASH INT  (96)

	SLASH  shift 125
	.  error


state 104
	vtnchain3 : vtn vtnchain2 .  (100)

	.  reduce 100


state 105
	vtnchain2 : vtn . vtnchain  (99)

	INT  shift 103
	.  error

	vtnchain  goto 126
	vtn  goto 127


state 106
	exception : MATERIAL error NL .  (13)

	.  reduce 13


state 107
	exception : LIBRARY error NL .  (12)

	.  reduce 12


state 108
	degree : DEGREE INT .  (56)
	degree : DEGREE INT . INT  (57)

	INT  shift 128
	DEGREE  reduce 56
	BASIS  reduce 56
	STEP  reduce 56
	END  reduce 56


state 109
	basis : BASIS U . intchain  (58)

	INT  shift 129
	.  error

	intchain  goto 130


state 110
	basis : BASIS VERTEX . intchain  (59)

	INT  shift 129
	.  error

	intchain  goto 131


state 111
	step : STEP INT .  (60)
	step : STEP INT . INT  (61)

	INT  shift 132
	DEGREE  reduce 60
	BASIS  reduce 60
	STEP  reduce 60
	END  reduce 60


state 112
	vertex : VERTEX FLOAT FLOAT FLOAT .  (34)
	vertex : VERTEX FLOAT FLOAT FLOAT . FLOAT  (35)

	FLOAT  shift 133
	$end  reduce 34
	NL  reduce 34


state 113
	texture : TEXTURE FLOAT FLOAT FLOAT .  (38)

	.  reduce 38


state 114
	normal : NORMAL FLOAT FLOAT FLOAT .  (39)

	.  reduce 39


state 115
	parameter : PARAMETER FLOAT FLOAT FLOAT .  (42)

	.  reduce 42


state 116
	vchain : v vchain .  (83)

	.  reduce 83


state 117
	vn : INT SLASH SLASH . INT  (91)

	INT  shift 134
	.  error


state 118
	vt : INT SLASH INT .  (86)
	vtn : INT SLASH INT . SLASH INT  (96)

	SLASH  shift 135
	INT  reduce 86


state 119
	vt : INT SLASH . INT  (86)

	INT  shift 136
	.  error


state 120
	vtchain2 : vt vtchain .  (89)

	.  reduce 89


state 121
	vtchain : vt .  (87)
	vtchain : vt . vtchain  (88)

	INT  shift 97
	$end  reduce 87
	NL  reduce 87

	vtchain  goto 137
	vt  goto 121


state 122
	vn : INT SLASH . SLASH INT  (91)

	SLASH  shift 117
	.  error


state 123
	vnchain2 : vn vnchain .  (94)

	.  reduce 94


state 124
	vnchain : vn .  (92)
	vnchain : vn . vnchain  (93)

	INT  shift 100
	$end  reduce 92
	NL  reduce 92

	vnchain  goto 138
	vn  goto 124


state 125
	vtn : INT SLASH . INT SLASH INT  (96)

	INT  shift 139
	.  error


state 126
	vtnchain2 : vtn vtnchain .  (99)

	.  reduce 99


state 127
	vtnchain : vtn .  (97)
	vtnchain : vtn . vtnchain  (98)

	INT  shift 103
	$end  reduce 97
	NL  reduce 97

	vtnchain  goto 140
	vtn  goto 127


state 128
	degree : DEGREE INT INT .  (57)

	.  reduce 57


state 129
	intchain : INT .  (105)
	intchain : INT . intchain  (106)

	INT  shift 129
	DEGREE  reduce 105
	BASIS  reduce 105
	STEP  reduce 105
	END  reduce 105

	intchain  goto 141


state 130
	basis : BASIS U intchain .  (58)

	.  reduce 58


state 131
	basis : BASIS VERTEX intchain .  (59)

	.  reduce 59


state 132
	step : STEP INT INT .  (61)

	.  reduce 61


state 133
	vertex : VERTEX FLOAT FLOAT FLOAT FLOAT .  (35)

	.  reduce 35


state 134
	vn : INT SLASH SLASH INT .  (91)

	.  reduce 91


state 135
	vtn : INT SLASH INT SLASH . INT  (96)

	INT  shift 142
	.  error


state 136
	vt : INT SLASH INT .  (86)

	.  reduce 86


state 137
	vtchain : vt vtchain .  (88)

	.  reduce 88


state 138
	vnchain : vn vnchain .  (93)

	.  reduce 93


state 139
	vtn : INT SLASH INT . SLASH INT  (96)

	SLASH  shift 135
	.  error


state 140
	vtnchain : vtn vtnchain .  (98)

	.  reduce 98


state 141
	intchain : INT intchain .  (106)

	.  reduce 106


state 142
	vtn : INT SLASH INT SLASH INT .  (96)

	.  reduce 96


Rules never reduced:
	curve : CURVE FLOAT FLOAT vchain2  (62)
	curve : CURVE2D pchain2  (63)
	surface : SURFACE FLOAT FLOAT FLOAT FLOAT  (64)
	vertexChain : vchain  (69)
	vertexChain : vtchain  (70)
	vertexChain : vnchain  (71)
	vertexChain : vtnchain  (72)
	vertexChain2 : vchain2  (73)
	vertexChain2 : vtchain2  (74)
	vertexChain2 : vnchain2  (75)
	vertexChain2 : vtnchain2  (76)
	vertexChain3 : vchain3  (77)
	vertexChain3 : vtchain3  (78)
	vertexChain3 : vnchain3  (79)
	vertexChain3 : vtnchain3  (80)
	p : INT  (101)
	pchain : p  (102)
	pchain : p pchain  (103)
	pchain2 : p pchain  (104)


44 terminals, 51 nonterminals
107 grammar rules, 143 states
